--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["asynchronous", "concurrency", "hardware-support", "science"]
 
 [dependencies]
 futuresdr = { version = "0.0.27"}
+async-trait = "0.1.52"
 
 [workspace]
 members = [
