--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ categories = ["asynchronous", "concurrency", "hardware-support", "science"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futuresdr = { version = "0.0.27"}
+futuresdr = { git="https://github.com/FutureSDR/FutureSDR", version = "0.0.30"}
+async-trait = "0.1.52"
 
 [workspace]
 members = [
