--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - chore/dist
 
 env: 
   CARGO_TERM_COLOR: always
@@ -14,6 +15,7 @@ env:
 jobs:
   package-crate:
     runs-on: ubuntu-latest
+    environment: cargo-crate-publish
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
