--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   package-crate:
     runs-on: ubuntu-latest
+    environment: cargo-crate-publish
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
