--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
+      - name: Login to crates.io
+        uses: actions-rs/cargo@v1
+        with:
+          toolchain: nightly
+          command: login
+          args: ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - run: sudo apt-get install -y libzmq3-dev
       - run: sudo apt-get -y install libasound2-dev
       - run: sudo apt-get -y install liblttng-ust-dev
