--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 homepage = "https://www.futuresdr.org"
 repository = "https://github.com/futuresdr/fsdr-blocks/"
 description = "Building blocks for FutureSDR signal processing library for SDR and real-time DSP."
-keywords = ["sdr", "radio", "blocks", "iir", "fir", "async", "acceleration"]
+keywords = ["sdr", "radio", "dsp", "async", "acceleration"]
 categories = ["asynchronous", "concurrency", "hardware-support", "science"]
 readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
