--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
 async-trait = "0.1.68"
 crossbeam-channel = { version = "0.5.8", optional = true }
 bimap = { version = "0.6.3", optional = true }
+serde = "^1.0"
+serde_derive = "^1.0"
+serde_json = "^1.0"
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
