--- a/crates/sigmf/Cargo.toml
+++ b/crates/sigmf/Cargo.toml
@@ -19,3 +19,7 @@ thiserror = "1.0.50"
 
 [build-dependencies]
 rustc_version = "0.4.0"
+
+[dev-dependencies]
+quickcheck = "1.0.3"
+quickcheck_macros = "1"
