--- a/crates/sigmf/Cargo.toml
+++ b/crates/sigmf/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [features]
 quickcheck=['dep:quickcheck']
-build-binary=['dep:clap', 'dep:anyhow', 'dep:sha2']
+build-binary=['dep:clap', 'dep:anyhow', 'dep:sha2', 'dep:hex']
 
 [dependencies]
 serde = "^1.0"
@@ -24,6 +24,7 @@ quickcheck = {version = "1.0.3", optional = true}
 clap = { version = "4.4.7", optional = true, features = ["derive"] }
 anyhow = { version = "1.0.75", optional = true }
 sha2 = { version = "0.10.8", optional = true }
+hex = { version = "0.4.3", optional = true }
 
 [build-dependencies]
 rustc_version = "0.4.0"
