--- a/crates/sigmf/Cargo.toml
+++ b/crates/sigmf/Cargo.toml
@@ -20,6 +20,9 @@ serde_derive = "^1.0"
 serde_json = "^1.0"
 thiserror = "1.0.50"
 quickcheck = {version = "1.0.3", optional = true}
+uuid = {version = "1.5.0", features = ["serde"]}
+sha2 = { version = "0.10.8"}
+hex = { version = "0.4.3"}
 
 [build-dependencies]
 rustc_version = "0.4.0"
