--- a/crates/sigmf/Cargo.toml
+++ b/crates/sigmf/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+default = ["quickcheck"]
 quickcheck=['dep:quickcheck']
 
 [dependencies]
@@ -29,7 +30,6 @@ rustc_version = "0.4.0"
 
 [dev-dependencies]
 quickcheck_macros = "1"
-sigmf = {features = ["quickcheck"], path="."}
 
 [lib]
 name = "sigmf"
