--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,8 @@ readme = "README.md"
 [workspace]
 members = [
     ".",
-    "crates/sigmf",
-    "crates/sigmf/utilities",
-    "examples/sigmf-samples",
+    "crates/*",
+    # "examples/*",
 ]
 
 [dependencies]
@@ -28,6 +27,7 @@ crossbeam-channel = { version = "0.5.8", optional = true }
 bimap = { version = "0.6.3", optional = true }
 sigmf = { version = "0.1.0", path = "crates/sigmf" }
 async-fs = "2.1.0"
+serde = "1.0.193"
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
