--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde = "1.0.193"
 criterion = { version = "0.4.0", features = ["html_reports"] }
 rand = { version = "0.8.5" }
 quickcheck_macros = "1"
+serde_json = "1.0.108"
 
 [features]
 default = []
