chore(sigmf): fmt + unused

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ members = [
 ]
 
 [dependencies]
-#futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
-futuresdr = { path = "../FutureSDR" }
+futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
+#futuresdr = { path = "../FutureSDR" }
 async-trait = "0.1.68"
 crossbeam-channel = { version = "0.5.8", optional = true }
 bimap = { version = "0.6.3", optional = true }
