--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,26 +12,33 @@ categories = ["asynchronous", "concurrency", "hardware-support", "science"]
 readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [
+    ".",
+    "crates/*",
+    # "examples/*",
+]
+
 [dependencies]
 futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
-#futuresdr = { version="0.0.32" }
+#futuresdr = { path = "../FutureSDR" }
 async-trait = "0.1.68"
 crossbeam-channel = { version = "0.5.8", optional = true }
 bimap = { version = "0.6.3", optional = true }
+sigmf = { version = "0.1.0", path = "crates/sigmf" }
+async-fs = "2.1.0"
+serde = "1.0.193"
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
 rand = { version = "0.8.5" }
+quickcheck_macros = "1"
+serde_json = "1.0.108"
 
 [features]
 default = []
 crossbeam = ["dep:crossbeam-channel"]
 cw = ["dep:bimap"]
-
-[workspace]
-members = [
-    ".",
-]
 
 [[bench]]
 name = "crossbeam_sink"
