--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,22 +22,25 @@ members = [
 [dependencies]
 futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
 #futuresdr = { path = "../FutureSDR" }
-async-trait = "0.1.68"
-crossbeam-channel = { version = "0.5.8", optional = true }
+async-channel = { version = "2.2.0", optional = true }
+async-trait = "0.1.78"
+crossbeam-channel = { version = "0.5.12", optional = true }
 bimap = { version = "0.6.3", optional = true }
 sigmf = { version = "0.1.0", path = "crates/sigmf" }
-async-fs = "2.1.0"
-serde = "1.0.193"
+async-fs = "2.1.1"
+serde = "1.0.197"
 
 [dev-dependencies]
-criterion = { version = "0.4.0", features = ["html_reports"] }
+criterion = { version = "0.5.1", features = ["html_reports"] }
+tokio-test = "0.4.4"
 rand = { version = "0.8.5" }
 quickcheck_macros = "1"
-serde_json = "1.0.108"
+serde_json = "1.0.114"
 
 [features]
 default = []
 crossbeam = ["dep:crossbeam-channel"]
+async-channel = ["dep:async-channel"]
 cw = ["dep:bimap"]
 
 [[bench]]
