--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,15 @@ jobs:
     env:
       RUST_BACKTRACE: full
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt, clippy
           target: wasm32-unknown-unknown
+
+      - name: Apt update
+        run: sudo apt-get -y update
 
       - name: Install ZeroMQ
         run: sudo apt-get install -y libzmq3-dev
@@ -42,6 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
+      - run: sudo apt-get -y update
       - run: sudo apt-get install -y libzmq3-dev
       - run: sudo apt-get -y install libasound2-dev
       - run: sudo apt-get -y install liblttng-ust-dev
