--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
           toolchain: nightly
           command: login
           args: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - run: sudo apt-get -y update
       - run: sudo apt-get install -y libzmq3-dev
       - run: sudo apt-get -y install libasound2-dev
       - run: sudo apt-get -y install liblttng-ust-dev
